# ppx_compare

./: CHANGES.md  INSTALL.txt  META.ab  Makefile  README.md  _oasis  _tags  install.ml  myocamlbuild.ml  opam  ppx_compare.opam  setup.ml
expander/: dune  jbuild  ppx_compare_expander.ml  ppx_compare_expander.mli  ppx_compare_expander.mllib  ppx_compare_expander_intf.ml
js-utils/: install_tags.ml
runtime/: dune  ppx_compare_lib.ml  ppx_compare_lib_intf.ml
runtime-lib/: dune  jbuild
src/: META  dune  jbuild  ppx_compare.ml  ppx_compare.mldylib  ppx_compare.mli
test/: check_optims.ml  compare_test.ml  comparelib_test.ml  dune  errors.mlt  global_modality.ml  global_modality.mlt  jbuild  modalities.ml  ppx_template_interaction.ml  test.ml
test-explicit-locality/: dune  test.ml  test.mli
