opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_compare"
bug-reports: "https://github.com/janestreet/ppx_compare/issues"
dev-repo: "git+https://github.com/janestreet/ppx_compare.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "ppx_type_conv"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Generation of comparison functions from types

Part of the Jane Street's PPX rewriters collection.
"
