opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_compare"
bug-reports: "https://github.com/janestreet/ppx_compare/issues"
dev-repo: "git+https://github.com/janestreet/ppx_compare.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_compare/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "base"
  "dune"   {>= "2.0.0"}
  "ppxlib" {>= "0.28.0"}
]
synopsis: "Generation of comparison functions from types"
description: "
Part of the Jane Street's PPX rewriters collection.
"
