opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_compare"
bug-reports: "https://github.com/janestreet/ppx_compare/issues"
dev-repo: "git+https://github.com/janestreet/ppx_compare.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_compare/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppxlib_jane"
  "dune"        {>= "3.11.0"}
  "ppxlib"      {>= "0.28.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Generation of comparison functions from types"
description: "
Part of the Jane Street's PPX rewriters collection.
"
